[package]
name = "canto"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11.0", default-features = false, features = ["bevy_asset", "bevy_core_pipeline", "bevy_ui", "bevy_winit", "jpeg", "png", "webp", "wayland"] }
ignore = "0.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
strip = true
panic = "abort"